TIKA-4272: start moving the plugin manager stuff into the pipes server